# Dicer

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml
dicer/: CMakeLists.txt
dicer/include/dicer/: CommandDescriptorHelper.hpp  Contexts.hpp  DiceThrow.hpp  DiceThrowResolvingMethod.hpp  DicerPEGTL.hpp  Exceptions.hpp  FacedDiceThrow.hpp  IDescriptible.hpp  IResolvable.hpp  NamedDice.hpp  NamedDiceThrow.hpp  Parser.h  Parser.hpp  Resolvable.hpp  Resolver.hpp  Result.h  Throw.h  Throw.hpp  ThrowCommand.hpp  ThrowCommandExtract.hpp  ThrowCommandResult.hpp  ThrowCommandStack.hpp  ThrowRepartition.hpp  _Base.hpp
dicer/include/dicer/PEGTL/: Actions.hpp  Grammar.hpp  Operators.hpp  ResolvingMethods.hpp  _.hpp
dicer/src/: DicerPEGTL.hpp  Parser.cpp
tests/: CMakeLists.txt  tests.cpp
tests/specialized/: TestParser.hpp  TestUtility.hpp
toolchains/: clang-ci-appveyor.cmake
